crates/compiler/semantic/tests/snapshots/diagnostics__lib::functions::parameter_validation::test_unused_parameter_warning.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::functions::parameter_validation::test_unused_parameter_warning"
---
Fixture: lib::functions::parameter_validation::test_unused_parameter_warning
============================================================
Source code:

        func test(unused_param: felt) -> felt {
            return 42;
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[1002] Warning: Unused variable 'unused_param'
   ╭─[ lib::functions::parameter_validation::test_unused_parameter_warning:2:19 ]
   │
 2 │         func test(unused_param: felt) -> felt {
   │                   ──────┬─────  
   │                         ╰─────── Unused variable 'unused_param'
───╯
