crates/compiler/semantic/tests/snapshots/diagnostics__lib::functions::return_types::test_function_return_undeclared_variable.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::functions::return_types::test_function_return_undeclared_variable"
---
Fixture: lib::functions::return_types::test_function_return_undeclared_variable
============================================================
Source code:

        func test() -> felt {
            return undefined_var;
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ lib::functions::return_types::test_function_return_undeclared_variable:3:20 ]
   │
 3 │             return undefined_var;
   │                    ──────┬──────  
   │                          ╰──────── Undeclared variable 'undefined_var'
───╯
