crates/compiler/semantic/tests/snapshots/diagnostics__lib::integration::test_error_combination_undeclared_and_unused.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::integration::test_error_combination_undeclared_and_unused"
---
Fixture: lib::integration::test_error_combination_undeclared_and_unused
============================================================
Source code:

        func test() {
            let unused_var = 42;
            let result = undefined_var + 10;
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ lib::integration::test_error_combination_undeclared_and_unused:4:26 ]
   │
 4 │             let result = undefined_var + 10;
   │                          ──────┬──────  
   │                                ╰──────── Undeclared variable 'undefined_var'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::integration::test_error_combination_undeclared_and_unused:2:14 ]
   │
 2 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
